# electrolytedb

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: checks.yml
src/electrolytedb/: __init__.py  _pytest_plugin.py  _version.py  commands.py  conftest.py  db_api.py
src/electrolytedb/tests/: data.py  test_commands.py  test_data_model.py  test_db_api.py  test_edb.py  test_schemas.py  util.py
